--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
         <section id="home" class="home">
             <div class="home-content">
+                <h1>¡Que comience la aventura!</h1>
                 <img src="img/portadaRosaCruz.jpg" alt="Portada Rosacruz">
                 <div class="text-container">
                     <p>¿Me creerías si te dijera que hay algo tangible que puede darte vida eterna; que puede eliminar la pobreza y abolir las clases sociales; que podrá sanar enfermos y traernos la tan utópica paz mundial?</p>
@@ -56,9 +57,8 @@
             <img src="img/dividerRose.png" alt="Divider Rose">
         </div>
 
- 
         <section id="personajes" class="personajes">
-            <h1>Personajes</h1>
+            <h2>Personajes</h2>
             <div class="imagenes-personajes">
                 <img src="img/personaje1.jpg" alt="Evelin Rosenkreuz">
                 <img src="img/personaje2.jpg" alt="Mailon Dirié">
@@ -75,7 +75,7 @@
 
 
         <section id="autora" class="autora">
-            <h1>Sobre la Autora</h1>
+            <h2>Sobre la Autora</h2>
             <div class="autora-content">
                 <img src="img/perfil1.jpg" alt="Perfil de K. S. López" class="perfil-img">
                 <div class="autora-text">
@@ -97,7 +97,7 @@
 
 
         <section id="contacto" class="contacto">
-            <h1>Contacto</h1>
+            <h2>Contacto</h2>
             <form action="#" method="post">
                 <label for="nombre">Tu Nombre</label>
                 <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre" required>
